// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentTooltip default 1`] = `
<div
  className="css-14hvf8r-TooltipWrapper-root"
>
  <div
    className="css-qzjlos-TextWrapper-root"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 css-1b3ysuv-MuiTypography-root"
    >
      The Dwolla balance is a Funding Source that can be utilized like a “wallet” for holding a stored value of USD funds.
    </p>
  </div>
</div>
`;

exports[`ContentTooltip with \`dwolla-balance\` preset 1`] = `
<div
  className="css-14hvf8r-TooltipWrapper-root"
>
  <div
    className="css-1cmw82f-IconWrapper-root"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-6lijc5-MuiSvgIcon-root"
      focusable="false"
    />
  </div>
  <div
    className="css-qzjlos-TextWrapper-root"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-81nu7f-MuiTypography-root"
    >
      Dwolla Balance
    </h6>
    <p
      className="MuiTypography-root MuiTypography-body2 css-1b3ysuv-MuiTypography-root"
    >
      Dwolla Balance is a digital wallet-based solution that lets you and your users hold funds and initiate payments.
    </p>
  </div>
</div>
`;

exports[`ContentTooltip with href, no icon 1`] = `
<a
  href="https://developers.dwolla.com/docs"
>
  <span
    aria-label={null}
    aria-labelledby={null}
    className=" css-1mz5jyq-WrappedSpan-root"
    data-mui-internal-clone-element={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    a digital wallet
  </span>
</a>
`;

exports[`ContentTooltip with icon, with title 1`] = `
<div
  className="css-14hvf8r-TooltipWrapper-root"
>
  <div
    className="css-1cmw82f-IconWrapper-root"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1rysupe-MuiSvgIcon-root-MuiSvgIcon-root"
      data-testid="AcUnitIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M22 11h-4.17l3.24-3.24-1.41-1.42L15 11h-2V9l4.66-4.66-1.42-1.41L13 6.17V2h-2v4.17L7.76 2.93 6.34 4.34 11 9v2H9L4.34 6.34 2.93 7.76 6.17 11H2v2h4.17l-3.24 3.24 1.41 1.42L9 13h2v2l-4.66 4.66 1.42 1.41L11 17.83V22h2v-4.17l3.24 3.24 1.42-1.41L13 15v-2h2l4.66 4.66 1.41-1.42L17.83 13H22z"
      />
    </svg>
  </div>
  <div
    className="css-qzjlos-TextWrapper-root"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 css-81nu7f-MuiTypography-root"
    >
      The Dwolla Balance
    </h6>
    <p
      className="MuiTypography-root MuiTypography-body2 css-1b3ysuv-MuiTypography-root"
    >
      The Dwolla balance is a Funding Source that can be utilized like a “wallet” for holding a stored value of USD funds.
    </p>
  </div>
</div>
`;

exports[`ContentTooltip with icon, with title, with href 1`] = `
<a
  href="https://developers.dwolla.com/docs"
>
  <span
    aria-label={null}
    aria-labelledby={null}
    className=" css-1mz5jyq-WrappedSpan-root"
    data-mui-internal-clone-element={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
  >
    a digital wallet
  </span>
</a>
`;

exports[`ContentTooltip with icon, without title 1`] = `
<div
  className="css-14hvf8r-TooltipWrapper-root"
>
  <div
    className="css-1cmw82f-IconWrapper-root"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1rysupe-MuiSvgIcon-root-MuiSvgIcon-root"
      data-testid="AcUnitIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M22 11h-4.17l3.24-3.24-1.41-1.42L15 11h-2V9l4.66-4.66-1.42-1.41L13 6.17V2h-2v4.17L7.76 2.93 6.34 4.34 11 9v2H9L4.34 6.34 2.93 7.76 6.17 11H2v2h4.17l-3.24 3.24 1.41 1.42L9 13h2v2l-4.66 4.66 1.42 1.41L11 17.83V22h2v-4.17l3.24 3.24 1.42-1.41L13 15v-2h2l4.66 4.66 1.41-1.42L17.83 13H22z"
      />
    </svg>
  </div>
  <div
    className="css-qzjlos-TextWrapper-root"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 css-1b3ysuv-MuiTypography-root"
    >
      The Dwolla balance is a Funding Source that can be utilized like a “wallet” for holding a stored value of USD funds.
    </p>
  </div>
</div>
`;
